# Lexicom

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
app/configuration/: __init__.py
app/internal/repository/: __init__.py
app/internal/repository/redis/: __init__.py  connection.py  phone_address.py
app/internal/routes/: __init__.py  phone_address.py
app/internal/services/: __init__.py  phone_address.py
app/pkg/connectors/: __init__.py
app/pkg/connectors/redis/: __init__.py  resource.py
app/pkg/models/: __init__.py
app/pkg/models/app/: phone_address.py
app/pkg/settings/: settings.py
