[tool.poetry]
name = "test"
version = "0.1.0"
description = "Test"
authors = ["Alexandr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = {extras = ["dotenv"], version = "^1.10.13"}
dependency-injector = "^4.40.0"
redis = ">=4.2.0rc1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
